--- a/langchain_basics.ipynb
+++ b/langchain_basics.ipynb
@@ -53,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "'नमस्कार, माझे नाव सिद्धेश सोनावणे आहे.\\n\\n(Namaskār, mājhe nāv Siddhesh Sōnāvaṇe āhe.)'"
+       "'नमस्कार, माझे नाव सिद्धेश सोनावणे आहे.'"
       ]
      },
      "execution_count": 4,
@@ -91,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "'नमस्कार, माझे नाव सिद्धेश सोनवणे आहे.'"
+       "'नमस्कार, माझे नाव सिद्धेश सोनावणे आहे.'"
       ]
      },
      "execution_count": 5,
@@ -107,6 +107,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "c987c2d9-17a5-4772-8e1c-365f59ec0385",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "8b026e30-6991-400e-a6d2-a67b4011bd8d",
    "metadata": {},
@@ -116,17 +127,6 @@
     "Let's create a PromptTemplate here. It will take in two user variables:\n",
     "<br>language: The language to translate text into\n",
     "<br>text: The text to translate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c987c2d9-17a5-4772-8e1c-365f59ec0385",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "\n"
    ]
   },
   {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "b41b6d73-702b-4a4e-b984-58db08294a5b",
    "metadata": {},
    "outputs": [],
@@ -176,17 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "750e132f-26fe-4444-b255-ac8bea57fa00",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'डेटाबेस सिस्टम म्हणजे डेटा व्यवस्थापन आणि प्रबंधन करण्यासाठी वापरल्या जाणाऱ्या सॉफ्टवेअर आणि हार्डवेअरचे संयोजन आहे. या सिस्टममध्ये डेटाबेस, डेटाबेस मॅनेजमेंट सिस्टम (DBMS), आणि वापरकर्त्यांची अनुप्रयोगे यांचा समावेश होतो.\\n\\n1. **डेटाबेस**: ही डेटाची संग्रहित आणि सुसंगत रीतीने व्यवस्थापित केलेली संरचना आहे. डेटा टेबल्स, रेकॉर्ड्स, आणि फील्ड्समध्ये संग्रहित केले जाते.\\n\\n2. **डेटाबेस मॅनेजमेंट सिस्टम (DBMS)**: हे सॉफ्टवेअर आहे जे डेटाबेसचे व्यवस्थापन करते. DBMS डेटाची निर्मिती, संपादन, शोध, आणि विलगीकरण यांची कार्ये करते. यामध्ये सुरक्षा, बॅकअप, आणि पुनर्स्थापना यांचा समावेश होतो.\\n\\n3. **वापरकर्त्यांची अनुप्रयोगे**: डेटाबेस सिस्टमवर वापरकर्ते डेटाला प्रवेश करण्यासाठी आणि ते वापरण्यासाठी अनुप्रयोगे वापरतात. यामध्ये वेब अनुप्रयोगे, मोबाइल अनुप्रयोगे, आणि डेस्कटॉप अनुप्रयोगे यांचा समावेश होऊ शकतो.\\n\\nडेटाबेस सिस्टम विविध प्रकारच्या डेटाचे व्यवस्थापन करतात, जसे की टेक्स्ट, आकडे, इमेजेस, आणि व्हिडिओ. याचा उपयोग व्यवसाय, शैक्षणिक संस्था, सरकारी संस्था, आणि अनेक इतर क्षेत्रांमध्ये होतो.'"
+       "'डेटाबेस मॅनेजमेंट सिस्टम (डीएमएस) हे एक सॉफ्टवेअर सिस्टम आहे जे डेटाबेसवर डेटा व्यवस्थापित करण्यासाठी वापरले जाते. डेटाबेस ही एक संगणकीय सिस्टम आहे जिथे डेटा संग्रहित केले जाते आणि ते प्रक्रिया करण्यासाठी वापरले जाते. डीएमएसचे मुख्य उद्देश डेटाचे संग्रहण, संगणकीकरण, सुरक्षा आणि व्यवस्थापन करणे आहे.\\n\\nडीएमएसच्या काही महत्त्वाच्या घटकांमध्ये खालील गोष्टींचा समावेश होतो:\\n\\n1. **डेटा स्टोरेज मॅनेजमेंट**: डीएमएस डेटाचे संग्रहण आणि व्यवस्थापन करते, ज्यामुळे डेटाची गुणवत्ता आणि पुनर्प्राप्ती सुनिश्चित होते.\\n\\n2. **डेटा मॅनिपुलेशन लॅंग्वेज (डीएमएल)**: डीएमएसमध्ये डेटाला प्रविष्ट करणे, अपडेट करणे, काढून टाकणे आणि पुनर्प्राप्त करणे साठी वापरला जाणारा भाषा समाविष्ट आहे. उदाहरणार्थ, एसक्यूएल (SQL) ही एक प्रसिद्ध डीएमएल आहे.\\n\\n3. **डेटा सिक्युरिटी**: डीएमएस डेटाची सुरक्षा सुनिश्चित करते, ज्यामुळे डेटा अनधिकृत प्रवेशापासून संरक्षित राहते.\\n\\n4. **बॅकअप आणि रिकव्हरी**: डीएमएस डेटाचे बॅकअप घेते आणि कोणत्याही त्रुटीच्या परिणामी डेटाची पुनर्प्राप्ती करते.\\n\\n5. **मल्टी-यूझर एक्सेस**: डीएमएस एकाच वेळी अनेक वापरकर्त्यांना डेटाला एकाच वेळी प्रवेश करू देते.\\n\\nडीएमएसचे उपयोजन विविध क्षेत्रांमध्ये आहे, जसे की बँकिंग, रिटेल, हेल्थकेअर, शिक्षण आणि सरकारी सेवा. डीएमएस डेटाचे कार्यक्षम व्यवस्थापन करून व्यवसायांना निर्णय घेण्यास मदत करते आणि त्यांची कार्यक्षमता वाढवते.'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
