--- a/langchain_basics.ipynb
+++ b/langchain_basics.ipynb
@@ -158,7 +158,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# result = prompt_template.invoke({\"language\": \"Marathi\", \"text\": \"Priyanka\"})\n",
+    "# result = prompt_template.invoke({\"language\": \"Marathi\", \"text\": \"Sakshi\"})\n",
     "\n",
     "# # result\n",
     "# result.to_messages()\n"
