rag basics and rag using custom functions for splitting the data

--- a/resources/practice/rag_basics.ipynb
+++ b/resources/practice/rag_basics.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "USER_AGENT environment variable not set, consider setting it to identify your requests.\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_community.document_loaders import WebBaseLoader\n",
     "loader = WebBaseLoader(\"https://www.moneycontrol.com/news/business/ratan-tata-death-news-live-updates-tata-group-chairman-last-rights-funeral-liveblog-12839261.html\")\n",
@@ -47,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
    "source": [
     "print(len(vector_store))"
    ]
@@ -99,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,27 +193,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'There is no mention of \"Task Decomposition\" in the provided context. The text appears to be about Ratan Tata\\'s life, his childhood, and his passing away, but it does not discuss the concept of \"Task Decomposition\".'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rag_chain.invoke(\"What is Task Decomposition?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The article does not explicitly state who Ratan Tata is, but based on the context and the mentions of him in the articles, it can be inferred that Ratan Tata was a notable industrialist or businessperson. The articles mention his death, contributions to the Confederation of Indian Industry (CII), and quotes from other prominent individuals such as Viswanathan Anand, suggesting that he was a respected figure in India's industry and possibly a well-known public figure.\""
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rag_chain.invoke(\"Who is Ratan Tata\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The following people are mentioned in the article:\\n\\n1. Ratan Tata\\n2. Thackerays (referring to the Thackeray family, likely referring to Shiv Sena leaders Eknath Shinde and Uddhav Thackeray)\\n3. Pawars (referring to the Pawar family, likely referring to Sharad Pawar or his relatives)'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rag_chain.invoke(\"Which people are mentioned in the article\")"
    ]
