--- a/resources/practice/chains/chains_branching.ipynb
+++ b/resources/practice/chains/chains_branching.ipynb
@@ -2,11 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dotenv import load_dotenv\n",
     "from langchain.prompts import ChatPromptTemplate\n",
     "from langchain.schema.output_parser import StrOutputParser\n",
     "from langchain.schema.runnable import RunnableBranch\n",
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,9 +156,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Response to Negative Feedback**\n",
+      "\n",
+      "Dear [Customer],\n",
+      "\n",
+      "We are truly sorry to hear that you have experienced difficulties with our product. We take all feedback seriously and appreciate your candid comments about your experience.\n",
+      "\n",
+      "However, we also want to acknowledge that the language used in your review may have come across as harsh and critical. While we understand that you were unhappy with the outcome, we would like to respectfully point out that using strong words like \"terrible\" and \"broke after just one use\" may not accurately reflect our product's capabilities or intended performance.\n",
+      "\n",
+      "We want to assure you that we take pride in the quality of our products and strive to provide the best possible experience for all our customers. However, we also recognize that no product is perfect, and we appreciate any feedback that can help us improve and grow.\n",
+      "\n",
+      "Regarding your comment about the quality of our product being \"poor,\" we would like to inform you that we have a rigorous testing and quality control process in place to ensure that all our products meet our high standards. We also stand behind our products and offer a [insert warranty or return policy] to provide peace of mind for our customers.\n",
+      "\n",
+      "We understand that your dissatisfaction with the product is not simply due to a minor issue, but rather a significant experience. We want to assure you that we are committed to making things right and providing a resolution that meets your needs.\n",
+      "\n",
+      "In light of this feedback, we would like to escalate your concerns to our customer support team for further review and assistance. They will work with you to understand the nature of the issue and provide a suitable solution, which may include a refund or replacement.\n",
+      "\n",
+      "We value your business and appreciate your feedback in helping us improve our products and services. Thank you for bringing this matter to our attention, and we look forward to resolving it in a satisfactory manner.\n",
+      "\n",
+      "Best regards,\n",
+      "[Your Name]\n",
+      "\n",
+      "**Additional Steps:**\n",
+      "\n",
+      "* Escalate the issue to customer support or management as recommended.\n",
+      "* Investigate the root cause of the problem and take corrective actions to prevent similar issues in the future.\n",
+      "* Follow up with the customer to ensure that the issue has been resolved to their satisfaction.\n"
+     ]
+    }
+   ],
    "source": [
     "print(result)"
    ]
